--- a/src/components/catalog/style/catalog.scss
+++ b/src/components/catalog/style/catalog.scss
@@ -37,16 +37,17 @@
         }
     }
     .hotspots-container {
-        width: 100%;
+        width: 245px;
         height: calc(100% - 80px);
         padding-left: 15px;
         .item {
             width: 230px;
-            height: 180px;
+            height: auto;
+            margin-bottom: 10px;
             cursor: pointer;
             .img {
                 width: 100%;
-                height: 100%;
+                height: 180px;
                 img {
                     width: 100%;
                     height: 100%;
@@ -93,5 +94,15 @@
                 }
             }
         }
+    }
+    .ps__scrollbar-y-rail {
+        width: 0px !important;
+    }
+    .ps>.ps__scrollbar-y-rail>.ps__scrollbar-y,
+    .ps:hover>.ps__scrollbar-y-rail:hover>.ps__scrollbar-y,
+    .ps>.ps__scrollbar-y-rail:hover>.ps__scrollbar-y,
+    .ps:hover.ps--in-scrolling.ps--y>.ps__scrollbar-y-rail>.ps__scrollbar-y,
+    .ps.ps--in-scrolling.ps--y>.ps__scrollbar-y-rail>.ps__scrollbar-y {
+        width: 6px !important;
     }
 }
