--- a/src/components/panorama/style/panorama.scss
+++ b/src/components/panorama/style/panorama.scss
@@ -22,11 +22,11 @@
     .scene-choose {
         width: 500px;
         height: 500px;
-        background: #262626b5;
+        background-color: rgba(255, 255, 255, 0.77);
         .header {
             width: 100%;
             height: 30px;
-            background: #323232d9;
+            background: $globalDarkBackgroundColor;
             position: relative;
             color: white;
             line-height: 30px;
