--- a/src/components/catalog/style/catalog.scss
+++ b/src/components/catalog/style/catalog.scss
@@ -13,8 +13,26 @@
         display: flex;
         width: 100%;
         background: $globalGrayBackgroundColor;
-        justify-content: center;
         align-items: center;
+        .icon {
+            margin-left: 15px;
+            img {
+                width: 12px;
+                height: 12px;
+                position: relative;
+                top: 1px;
+                left: 2px;
+            }
+        }
+        .name {
+            display: inline-block;
+            margin-left: 5px;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            width: 150px;
+            color: white;
+        }
     }
     .hotspot-added {
         height: 50px;
@@ -31,6 +49,7 @@
             border: 1px solid $globalGrayBackgroundColor;
             border-radius: 2px;
             cursor: pointer;
+            color: white;
         }
         .add-btn:hover {
             color: $goldColor;
