--- a/src/components/panorama/style/panorama.scss
+++ b/src/components/panorama/style/panorama.scss
@@ -18,6 +18,20 @@
         .title {
             color: white;
         }
+        .normal {
+            display: block;
+        }
+        .active {
+            display: none;
+        }
+    }
+    .show-panorama-btn:hover {
+        .normal {
+            display: none;
+        }
+        .active {
+            display: block;
+        }
     }
     .scene-choose {
         width: 500px;
@@ -52,11 +66,12 @@
             margin-top: 10px;
             .item {
                 display: inline-block;
-                width: 230px;
+                width: 225px;
                 height: 200px;
                 margin-right: 15px;
                 margin-bottom: 10px;
                 cursor: pointer;
+                margin-left: 5px;
                 .img {
                     width: 100%;
                     height: 180px;
@@ -71,6 +86,14 @@
                     line-height: 20px;
                     padding-left: 5px;
                     color: white;
+                    .name {
+                        display: inline-block;
+                        margin-left: 5px;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                        white-space: nowrap;
+                        width: 200px;
+                    }
                 }
             }
         }
