--- a/src/components/renderJob/style/renderJob.scss
+++ b/src/components/renderJob/style/renderJob.scss
@@ -61,8 +61,8 @@
                         justify-content: center;
                         align-items: center;
                         .img-control {
-                            width: 85px;
-                            height: 85px;
+                            width: 60px;
+                            height: 60px;
                         }
                     }
                 }
@@ -72,6 +72,14 @@
                     line-height: 20px;
                     padding-left: 5px;
                     color: white;
+                    .name {
+                        display: inline-block;
+                        margin-left: 5px;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                        white-space: nowrap;
+                        width: 190px;
+                    }
                 }
             }
         }
